# JcodeAgent

./: .gitignore  .jcode_session.json  BEGINNER_GUIDE.md  CHANGELOG.md  FEATURES.md  FRONTEND_SETUP_COMPLETE.md  MIGRATION.md  NEXTJS_MIGRATION_COMPLETE.md  QUICKSTART.md  README.md  TECHNICAL_GUIDE.md  VERCEL_DEPLOY.md  install.ps1  install.sh  pyproject.toml  requirements.txt
docs/: ANALYTICS.md  beginner-guide.html  index.html  technical.html  vercel.json
docs/api/: install.ps1.js  install.sh.js  stats.js
frontend/: .gitignore  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/install.sh/: route.ts
frontend/app/api/stats/: route.ts
frontend/app/guide/: page.tsx
frontend/app/technical/: page.tsx
frontend/components/: Footer.tsx  Header.tsx  ThemeProvider.tsx
inactive/frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
inactive/frontend/app/: globals.css  layout.tsx  page.module.css  page.tsx
inactive/frontend/app/api/install.ps1/: route.ts
inactive/frontend/app/guide/: guide.module.css  page.tsx
inactive/frontend/app/technical/: page.tsx  technical.module.css
inactive/frontend/components/: Footer.module.css  Footer.tsx  Header.module.css  Header.tsx  HomeComponents.tsx  ThemeProvider.tsx
jcode/: __init__.py  __main__.py  analyzer.py  cli.py  coder.py  config.py  context.py  executor.py  file_manager.py  git_manager.py  intent.py  iteration.py  memory.py  ollama_client.py  planner.py  prompts.py  reviewer.py  scanner.py  settings.py  task_graph.py  web.py  worker_pool.py
