[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jcode"
version = "0.1.0"
description = "JCode — A local AI coding agent powered by Ollama"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ioan Andrei"}]

dependencies = [
    "ollama>=0.4.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "pydantic>=2.0",
]

[project.scripts]
jcode = "jcode.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jcode*"]
